*Empty MediaWiki Message*

--- a/Harry_Nijhuis.mw
+++ b/Harry_Nijhuis.mw
@@ -1,9 +1,10 @@
-'''Harry Nijhuis''' ([[De Lut]]) is wetholder in de gemeynde [[Loster]]. Töt [[2018]] was hee [[Streektaalfunctionaoris|consuleant]] van de [[Tweants]]e sproake, en verbeunden an de [[TwentseWelle]].
+'''Harry Nijhuis''' ([[De Lut]]) is wetholder in de gemeynde [[Loster]]. Töt [[2018]] was hee [[Streektaalfunctionaoris|konsulent]] van de [[Tweants|twentsk]]e språke vanuut de [[TwentseWelle]].
 
-Hee heuld zik gangs met t bewoaren en oetdreagen van de Tweantse sproake, geet langs skolen um oetleg te gewen oawer lespakketten in t Tweants, en gef zelf Tweantse kursussen.
+Hee höld sik gangs med et bewåren en uutdragen van de twentske språke, güng langs skolen üm uutleg te geaven oaver lespakketten in et twentsk, en gavven selv twentske kursussen.
+Ouk gavven hee et böken 'Twents voor beginners' uut.
 
-==Oetgoande verbeending==
-*[http://www.twentsewelle.nl/Pagina.aspx?Pagina=21 Webstea van TwentseWelle - deel oawer Streektaal]
+==Bökelyste==
+* Twents voor beginners 
 
 {{DEFAULTSORT:Nijhuis, Harry}}
 [[Kategorie:Tweants artikel]]
