--- a/Indiana.mw
+++ b/Indiana.mw
@@ -15,7 +15,7 @@
 | ofkorting = IN
 }}
 
-'''Indiana''' (spreak uut: ({{IPA|ɪndi'ænə}}) is nen ståt in de [[Verienigde Staoten van Amerika|Vereynigde Ståten van Amerika]]. Kultureel höyrt et by de amerikaanske [[Midwestern-streake]] en geografisk by de [[Great Lakes (Noordamerika)|Groute Meyrenstreake]]. Indiana hevt ne uppervlakte van 94.321 km² wårvan 1424 km² water (1,5%). By ne telling in [[2018]] woanden der 6.691.878 lüde. De höyvdstad en tegelyke de gröätste stad is [[Indianapolis]]. Et ligt an [[Lake Michigan]] in et noordwesten, [[Michigan]] in et noorden, [[Ohio]] in et ousten, [[Kentucky]] in et süden en süüdwesten en [[Illinois]] in et westen. 
+'''Indiana''' (spreak uut: ({{IPA|ɪndi'ænə}}) is nen ståt in de [[Verienigde Staoten van Amerika|Vereynigde Ståten van Amerika]]. Kultureel höyrt et by de amerikaanske [[Midwestern-streake]] en geografisk by de [[Great Lakes (Noordamerika)|Groute Meyrenstreake]]. Indiana hevt ne uppervlakte van 94.321 km² wårvan 1424 km² water (1,5%). By ne telling in [[2018]] woanden der 6.691.878 lüde. De höyvdstad en tegelyke de gröätste stad is [[Indianapolis]]. Et ligt an [[Lake Michigan]] in et noordwesten, [[Michigan]] in et noorden, [[Ohio]] in et ousten, [[Kentucky]] in et süden en süüdwesten en [[Illinois (stoat)|Illinois]] in et westen. 
 
 Indiana tröäd up den [[11 december|11. december]] van [[1816]] to as nyen amerikaansken ståt. Dårvöär was et dusenden jåren vry land vöär verskeidene [[Inheemse Amerikanen|inheymske volker]]. Seyt de grundlegging as nyen ståt sint de verskillende kolonisatyströymen ne afspegeling van de kulturele herkoamst van de lüde; de noordelike streake kreag vöäral lüde uut [[Ny Engeland]] en [[Ny Jork (ståt)|Ny Jork]]. Et midden van Indiana tröäk vöäral migranten uut de mid-atlantiske ståten en et nöästliggende Ohio. Südelik Indiana tröäk vöäral südelike migranten, höyvdsakelik uut [[Kentucky]] en [[Tennessee]].<ref>[http://www.britannica.com/EBchecked/topic/286017/Indiana/279873/Settlement-patterns-and-demographic-trends D'Antonio, William Vincent. Beck, Robert L. "Indiana – Settlement patterns and demographic trends". eb.com.] Bekeaken up 3 january 2012.</ref>
 
