--- a/Indiana.mw
+++ b/Indiana.mw
@@ -26,3 +26,5 @@ Indiana hevt verskillende verstädelikte  gebeden med meyr as 100.000 inwoaners 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Amerika]]
 [[Kategorie: Staoten van Amerika]]
+
+[[de:Indiana]]
