*Empty MediaWiki Message*

--- a/Indiana.mw
+++ b/Indiana.mw
@@ -27,4 +27,10 @@ Indiana hevt verskillende verstädelikte  gebeden med meyr as 100.000 inwoaners 
 [[Kategorie: Amerika]]
 [[Kategorie: Staoten van Amerika]]
 
+
+[[nds:Indiana]]
 [[de:Indiana]]
+[[en:Indiana]]
+[[fa:Indiana]]
+[[fy:indiana]]
+[[li:Indiana]]
