--- a/Metropool.mw
+++ b/Metropool.mw
@@ -9,3 +9,4 @@ Vör de steiging in de konsentrasy van weatenskap, polityk ov kultür binnen ne 
 ==Vöärbeylden van metropolen åver de wearld==
 
 {{Dialekt|act}}
+[[Kategorie:Geografie]]
