--- a/Boaden-Wurttembaarg.mw
+++ b/Boaden-Wurttembaarg.mw
@@ -70,7 +70,7 @@ Boaden-Wurttembaarg is onderverdaild in vaaier ''Regierungsbezirke'' (bestuurlek
 # [[Ulm]]
 
 == Boetende hìnwiezen ==
-* [http://www.baden-wuerttemberg.de/ Webstee van Baden-Württemberg (Duuts)]
+* [https://www.baden-wuerttemberg.de Webstee van Baden-Württemberg (Duuts)]
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Dailstoat van Duutslaand]]
