--- a/1340.mw
+++ b/1340.mw
@@ -2,6 +2,7 @@
 
 == Gebeurtenissen ==
 * [[7 juni]] - [[Rötterdaam (stad)|Rotterdam]] krig stadsrechten van graof [[Willem IV van Hollaand|Willem IV]] van Hollaand en Zeelaand
+Biermerk Brand opgericht
 
 == Geboren ==
 * [[20 augustus]] - [[Geert Grote]], diaken, godgeleerde, schriever, kloosterhervörmer en boeteprediker
