--- a/Ny_Heidendom.mw
+++ b/Ny_Heidendom.mw
@@ -17,5 +17,7 @@ De feesten gåt oaver de vergang van de tyd dår et jår hen. Sy ståt der so ai
 * [[Mabon]] 
 * [[Samhain]]/ [[halloween]]/ [[Allerheiligen]]/ [[Allerselen]]
 
-==Måne==
+===Måne===
 Vöäral Wikka heksen doot de måne volgen en vereyren, want de måne is jå et beyld van de Godinne. In katolike karken see y Mary ouk med de måne of ebeyled wörden. Dit sol oaver enöämen weasen van de olde heidenske vereyring van de [[Modergodinne]].
+
+Elke vulle måne kummet heksen by mekandere -of sy doot et alleyne- ümme een ''sabbat'' te vyren.
