--- a/Ny_Heidendom.mw
+++ b/Ny_Heidendom.mw
@@ -4,7 +4,7 @@ Et '''Ny Heidendom''' is een (natuur)godsdeenst dee terügge grept når oldere v
 In het heidendom wördet der vöäle verhalen vertelt. Want unse vöärchristelike vöärolders hadden een wyde verhalencultuur. Al de verhalen oaver helden, goden en et untståne van de wearld en de sociale kasten wördden pråtend döär egeavene. Een antal van de verhalen hebbet in et begün van et verchristeliken et up papyre eredded (so as de [[Edda]] en keltiske spröäkys dee as döär munniken up eskreaven binnet). Van disse verhalen müttet wy et hebben, döär gåt de nye heidenen vanüüt. Sy gåt de verhalen in disse tyd trekken en bekyken wat der vöär wysheiden vöär de hüdige tyd der in ståt. Mar de verhalen künnet ouk gewoon mooi weasen, en good up evored wörden ter vermaak en inleaving.
 
 ==Feesten==
-De feesten dee as heidenen der up nå holdet, bint oaver enöämen van de feesten dee as de olde kelten en germanen döäden. Mar ouk wörd der ekekken når feestdage van romeinen, greken, slaven en so meyr, ümdat dissend de feesten ungeveyr gelyke hadden. Disse godsdeensten hebbet allemåle eynsülvde oorsprüng by de Indo-Europeanen. Wikka heksen doot der ait noch by elke vulle måne rituelen. 
+De feesten dee as heidenen der up nå holdet, bint oaver enöämen van de feesten dee as de olde kelten en germanen döäden. Mar ouk wörd der ekekken når feestdage van romeinen, greken, slaven en so meyr, ümdat dissend de feesten ungeveyr gelyke hadden. Disse godsdeensten hebbet allemåle eynsülvde oorsprüng by de Indo-Europeanen. Wikka heksen doot der ait noch by elke vulle måne rituelen. Wikka lüde nömet so ne feest een ''sabbat''.
 
 De feesten gåt oaver de vergang van de tyd dår et jår hen. Sy ståt der so ait by stille dat de natuur veranderen düt, dat de jårgetyden mekandere ofwisselet. Et bewüst medloupen med de seisunen hevt der ouk med van doon dat dat de ofspegelinge is van uwen eigen leaven; want y wörd ouk geboaren, gröit up en kumt weader üüt de tyd. Vöär vöäl heidenen is de natuur dee as elk jår weader syn runde löpt, een belovte dat ysülv ouk nå dit leaven weader een ny leaven krygt.
 
