*Empty MediaWiki Message*

--- a/Ny_Heidendom.mw
+++ b/Ny_Heidendom.mw
@@ -1,5 +1,7 @@
 Et '''Ny Heidendom''' is een (natuur)godsdeenst dee terügge grept når oldere vöärchristelike godsdeensten. Mangs wördet ouk wal, når et engelsk, '''Paganisme''' of '''Neopaganisme''' enömed. 
 
+Et kan allemåle heyl verskillend weasen. Y hebt der gruppen dee as sich alleyne richted up de olde keltiske godsdeenst, anderen weader up de germaansken. Mar vöäle kyket wyder en hebbet sülvs invloden van inheymske amerikanen of de aboriginals. Y hoovt ouk neet by een grup an eslötten te weasen ümme 'heiden' of 'paganist' te weasen. Sy vallet samen ümdat sy allemåle kyket når vöärchristelike godsdeensten en gelöyvet dat de natuur heilig is. De meyste heidenen bint ouk drok med et milieu en et gröön leaven.
+
 ==Verhalen==
 In het heidendom wördet der vöäle verhalen vertelt. Want unse vöärchristelike vöärolders hadden een wyde verhalencultuur. Al de verhalen oaver helden, goden en et untståne van de wearld en de sociale kasten wördden pråtend döär egeavene. Een antal van de verhalen hebbet in et begün van et verchristeliken et up papyre eredded (so as de [[Edda]] en keltiske spröäkys dee as döär munniken up eskreaven binnet). Van disse verhalen müttet wy et hebben, döär gåt de nye heidenen vanüüt. Sy gåt de verhalen in disse tyd trekken en bekyken wat der vöär wysheiden vöär de hüdige tyd der in ståt. Mar de verhalen künnet ouk gewoon mooi weasen, en good up evored wörden ter vermaak en inleaving.
 
