--- a/Ny_Heidendom.mw
+++ b/Ny_Heidendom.mw
@@ -33,7 +33,7 @@ Enkelde stroumings binnen et heidendom:
 
 *[[Asatru]]
 *[[Wikka]]
-*[[Druisdisme]]
+*[[Druidisme]]
 *[[Sjamanisme]]
 *[[Nederlands Heidendom]]
 *...
