*Empty MediaWiki Message*

--- a/Samhain.mw
+++ b/Samhain.mw
@@ -2,6 +2,6 @@
 
 Vöär de kelten begünden alles vanuut et düüster. Ear dagen begünden as de sünne under güng. So ouk begünden ear nye jår by Samhain, want nu bint de dagen up syn körtenst. Up disse åvend gelöyvden de kelten, asset wy de myten nåleaset, dat de geystenwearld en unse wearld et körtst by mekander was, düs was et heyl makkelik ümme med de douden te pråten en ear te huus een stool te geaven. 
 
-[[Halloween]] stamt of van disse feestdag. De katolike feesten [[Allerheiligen]] en [[Allerselen]] bint, onder andere, in estelled ümme een christelike varsy van dit heidenske feest te geaven. Wårümme as Samhain een feest vöär de douden was. Nudaagske [[Wikka]] en [[nye heidenen]] vyret Samhain ouk wear.
+[[Halloween]] stamt of van disse feestdag. De katolike feesten [[Allerheiligen]] en [[Allerselen]] bint, onder andere, in estelled ümme een christelike varsy van dit heidenske feest te geaven. Wårümme as Samhain een feest vöär de douden was. Nudaagske [[Wikka]] en [[Nye Heidendom|nye heidenen]] vyret Samhain ouk wear.
 
 {{Dialekt|sdz}}
