corr using [[Project:AWB|AWB]]

--- a/Liest_mit_volkslaider_van_alle_landen.mw
+++ b/Liest_mit_volkslaider_van_alle_landen.mw
@@ -239,7 +239,7 @@
 |-----
 | [[Indonezie]] || [[Indonesia Raya]]
 |-----
-| [[Irak]] || | [[Ardulfurataini Watan|Ardulfurataini Watan ]]<br />[[The Royal Salute]]<br />[[Mawtini]]
+| [[Irak]] || | [[Ardulfurataini Watan|Ardulfurataini Watan]]<br />[[The Royal Salute]]<br />[[Mawtini]]
 |-----
 | [[Iran]]
 | [[Sorood-e Jomhoori-e Eslami]], voorheen [[Imperial Salute]] 
@@ -514,7 +514,7 @@
 |-----
 | [[Esperanto]] || [[La Espero]]
 |-----
-| [[NAVO]] || [[Hymne to the NATO ]] 
+| [[NAVO]] || [[Hymne to the NATo]] 
 |-----
 | [[Olympische Spelen|Olympische Spuuln]] || [[Ancient eternal and immortal spirit]] of [[Αρχαίον Πνεύμ'αθάνατον]]
 |}
