--- a/Henk_Bloemhoff.mw
+++ b/Henk_Bloemhoff.mw
@@ -1,6 +1,6 @@
 '''Henk Bloemhoff''' ([[Berkoop]], [[1948]]) is een [[taelkunde|taelkundige]] die specialiseerd is in de (mor)fonelogie van et [[Stellingwarfs]]. Hi'j is veural bekend as [[streektaalfunctionaoris|streektaelfunktionaoris]] van et Stellingwarfs bi'j de [[Stellingwarver Schrieversronte]] en deurdat hi'j in saemenwarking mit aanderen (waoronder Sietske Bloemhoff) et ''Stellingwarfs Woordeboek'' maekt het.
 
-Veerder het Bloemhoff nog een protte aandere taelkundige en [[dialekt]]ologische publikaosies op zien naeme staon, waoronder ''Taal in stad en land - Stellingwerfs'' (Sdu Uitgevers, [[2002]]) en ''Taal in stad en land - [[Drèents|Drents]]'' (mit de [[Drenthe|Drentse]] literetuurhistorikus [[Hendrik Nijkeuter|Henk Nijkeuter]], Sdu Uitgevers, [[2004]]). Hi'j is ien van de redakteuren van et ''Handboek Nedersaksische Taal- en Letterkunde'' (Van Gorcum, 2008).
+Veerder het Bloemhoff nog een protte aandere taelkundige en [[dialekt]]ologische publikaosies op zien naeme staon, waoronder ''Taal in stad en land - Stellingwerfs'' (Sdu Uitgevers, [[2002]]) en ''Taal in stad en land - [[Drèents|Drents]]'' (mit de [[Drenthe|Drentse]] literetuurhistorikus [[Hendrik Nijkeuter|Henk Nijkeuter]], Sdu Uitgevers, [[2004]]). Hi'j is ien van de redakteuren van et ''Handboek Nedersaksische Taal- en Letterkunde'' (Van Gorcum, 2008) en ''Nedersaksisch in een Notendop'' (Van Gorcum, 2019).
 
 {{DEFAULTSORT:Bloemhoff, Henk}}
 [[Kategorie:Stellingwarfs artikel]]
