/* Gemainte Midden-Grunnen */

--- a/Grunnegse_plaknoamen.mw
+++ b/Grunnegse_plaknoamen.mw
@@ -1049,9 +1049,9 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Schildwolde
 |Schewôlster
 |-
-|Sibboeren
+|Sibboern
 |Siddeburen 
-|Siddeboerster
+|Sibboerster
 |-
 |Slochter
 |Slochteren
