/* Galleri-je */ better image

--- a/Emmerik.mw
+++ b/Emmerik.mw
@@ -47,7 +47,7 @@ Bi-j ''Pauseleken Bulle Salutte Annimarum'' van [[16 juli]] [[1821]] wöd Emmeri
 <gallery>
 Ofbeelding:Emmerich_St._Martinikarke.jpg|St.Martinikarke
 Ofbeelding:Emmerich_rijnbrugge.jpg|Uutzicht op de brugge oaver den Rijn
-Ofbeelding:Emmerich_Christuskarke.jpg|Christuskarke
+Ofbeelding:Christuskirche Emmerich-8806.jpg|Christuskarke
 Ofbeelding:St. Aldegundis, Emmerich am Rhein-3782.jpg|Aldegondiskarke
 </gallery>
 
