--- a/Montenegro.mw
+++ b/Montenegro.mw
@@ -188,7 +188,7 @@ De [[Hawen van Bar]] is de belangriekste zeehawen van Montenegro. Dissen wör eb
 
 === Toerisme ===
 Montenegro hef ne antrekkelik oetzeende kuste en een bargachtig noorden. Et laand was ne toeristentrekker in in de tachtiger joaren van et [[20e eeuw|20ste joarhoonderd]]. Duur den [[Joegoslawiesen Oorlog]] raakten et laand zin positieve imago kwiet, woerduur et toerisme inzakten.
-[[Bestaand:Tara River Canyon.jpg|thumb|left|right|180px|[[Tara River Canyon|Tara Canyon]], de deepste canyon van Europa en tweede-deepste van de wearld]]
+[[Bestaand:Tara River Canyon.jpg|thumb|180px|[[Tara River Canyon|Tara Canyon]], de deepste canyon van Europa en tweede-deepste van de wearld]]
 De Montenegriense kuste is 295 km laank, met 72 km an straanden. An dee kuste lignt good-oonderhooldene oolde steaden. Rechtevoort is de kuste van Montenegro wier ene van de "beste oontdekkingen" vuur toeristen.
 
 In 2010 skreef de [[New York Times]] at de Ulcinj-strekke, met [[Velika Plaža]], [[Ada Bojana]] en et hotel Mediteran van Ulcinj ene van de "Top 31 plekken um te bezeuken in 2010" was.<ref>[http://www.nytimes.com/2010/01/10/travel/10places.html?pagewanted=2&ref=travel New York Times. The 31 Places to Go in 2010. Skrewen op 7 januwoari 2010.] Bekekken op 7 december 2012.</ref> Yahoo Travel skreef at Montenegro op [[Sjina]] noa et hardste gröaiden wat toerisme angeet.<ref>[http://travel.yahoo.com/p-interests-24784785 Travel.yahoo.com - 10 Top Hot Spots of 2009 by Yahoo Travel.] Bekekken op 11 september 2010</ref> Ook bie aandere populaire reaizegidsen steet Montenegro stöadig in de top, liek met [[Griekenlaand]], [[Spanje]] en aandere wearldtoeristentrekkers.<ref> [http://www.lonelyplanet.com/france/travel-tips-and-articles/42/50792 Holger Leue, Lonely Planet. Where to go in June. Bekekn op 11 September 2010]</ref>
