--- a/Ierlaand_(eilaand).mw
+++ b/Ierlaand_(eilaand).mw
@@ -1,14 +1,9 @@
-[[Bestaand:Ireland (4440319873).jpg|thumb|righr|200px|Sattelietfoto van t eilaand Ierlaand]]
+[[Bestaand:Ireland (4440319873).jpg|thumb|200px|Sattelietfoto van t eilaand Ierlaand]]
 '''Ierlaand''' ([[Iers]]: ''Éire''; [[Ulster-Schots]]: ''Airlann'' of ''Airlan'') is n [[eilaand]] in [[Europa (continent)|Europa]]. t Ligt op t westn van [[Groot-Brittanje]]. t Wörd umringd duur n [[Atlantiesen Oseaan]] en de [[Ierse Zee]].
 
 Op t eilaand lignt de onofhaankelike [[Ierse Reppubliek]] en [[Noord-Ierlaand]], wat offisjeel bie t [[Verenigd Keuninkriek]] heurt. Meestal wörd met n naam ''Ierlaand'' de reppubliek bedoold.
 
-t Eilaand wörd van ooldsher oonderverdeeld in 4 proveensies: [[Munster (Ierlaand)|Munster]], [[Leinster]], [[Connacht]] en [[Ulster]]. Noord-Ierlaand ligt volledig in Ulster.
-
-== Zeet ook ==
-* [[Ierse Reppubliek]]
-* [[Noord-Ierlaand]]
-* [[Verenigd Keuninkriek]]
+t Eilaand wörd van ooldsher oonderverdeeld in vier proveensies: [[Munster (Ierlaand)|Munster]], [[Leinster]], [[Connacht]] en [[Ulster]]. Noord-Ierlaand ligt volledig in Ulster.
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Ierlaand (eilaand)| ]]
