--- a/Bassdrum.mw
+++ b/Bassdrum.mw
@@ -1,5 +1,5 @@
-[[Bestaand: Bass drum.jpg|thumb|right|300x|nen Yamaha drumstel Bastromme]]
-[[Bestaand:Picswiss BL-47-47.jpg|thumb|right|300x|ne Concertbastromme]]
+[[Bestaand: Bass drum.jpg|thumb|300px|nen Yamaha drumstel Bastromme]]
+[[Bestaand:Picswiss BL-47-47.jpg|thumb|300px|ne Concertbastromme]]
 
 De '''grote tromme''' of '''bassdrum''' is ne tromme met nen leegn, zwoarn klaank. t Is nen roondn kettel met nen diameter tusken de 70 en 100 cm.  Det is an beaide kaantn bespönn met vel. Meesttieds wörd de grote tromme an ene kaante bespöld met n pedaal. In [[muziekkorps]]en hef n spöller de tromme vuur n boek hangn en wörd he van beaide kaantn bespöld met twee stökke met zachte nylon of veltne köppe.
 
@@ -12,7 +12,7 @@ De bastromn zeent in dree kattegoriejn te verdeeln:
 Wörd völle in zitnde [[orkest]]n gebroekt. t Is n groot apparaat, wat op n rek met raadkes is monteerd, zodat t verjag kan wordn. t Deenk wördt as oonderstönnige van de muziek broekt, um bepoalde stukn kracht bie te zetn of nen onmeundigen plear te geewn. t Is ginne konstante in de muziek. Op disse wieze keump he ook vuur in t frontwoark van [[Drum & Bugle Corps]].
 
 == Drumstelbastromme ==
-[[Bestaand:Stopa zdemontowana z bębna basowego.jpg|thumb|right|200x|n Mapex pedaal vuur ne drumstelbastromme]]
+[[Bestaand:Stopa zdemontowana z bębna basowego.jpg|thumb|200px|n Mapex pedaal vuur ne drumstelbastromme]]
 Steet in t midn van t drumstel, en de rest van de slagwoarkinstrumeantn stoat dr umhen of zeent dr op vaste maakt. Iej bespölt um met n voot, woervuur n spesjaal pedaalken an de tromme vaste zit. Duur op t pedaalken te treadn slöt n klopper teegn t vel van de tromme.
 
 In t seempelste drumritme keump n bastromslag op n eersn en n doardn tel van de moate. t Instrumeant is dus bedoold um de moate te hooldn.
@@ -25,7 +25,7 @@ Vanzelfs is dr dan ook ne ''Heel-down''-techniek, woerbie n voot plat op t pedaa
 === Dubbel ===
 Wat drummers hebt gearne n dubbel pedaal of zelfs ne dubbele bastromme. Hierduur köant ze met beaide bene de grote tromme bedeenn. Dit is vuural makkelik a'j wat rappere muziekstieln spölt, zo as [[Metal (muziek)|metal]] en [[drum 'n' bass]]. Zo kan dr ook ofwisseld wordn met basklaankn.
 == Marsjeerbastromme ==
-[[Bestaand:Cavaliers Bassque 2006.jpg|thumb|right|300x|Cavaliers 2006 basliene an t oefenn]]
+[[Bestaand:Cavaliers Bassque 2006.jpg|thumb|300px|Cavaliers 2006 basliene an t oefenn]]
 De "basliene" is n apart oonderdeel van n [[muziekkorps]]. Ne basliene kan bestoan oet één tot vief spöllers. In de wat tradisjonele muziekkorpsen is t dr vake mear ene. Dissen spöller gef de moate an en dut meestieds niks aanders as op alle veer de teln van de moate houwn. In tradisjonele korpsen wörd disse tromme ook nog wal es n ''oawerslag'' eneumd. Dit verwis noar nen visuelen techniek woerbie met n rechteroarm op t leenkervel ehouwn wörd (en aandersumme). Hierbie wörd n knuppel oawer de tromme hen teegn t aandere vel eslingerd. 
 
 In de [[Amerika]]ans-oriënteerde meziekkorpsen loop dr gemiddeld 4 of 5 grote tromn met. Disse zeent op verskilnde toonheugtes op mekoar of estemd en spölt ingewikkelde ritmepatroonn en ''splits''. Hierduur mut de spöllers onmeundig op mekoar in espöld wean, want bie disse korpsen mut ne bastromme net zo ingewikkeld muziek maakn as de aandere instremeantn.
