*Empty MediaWiki Message*

--- a/Allah.mw
+++ b/Allah.mw
@@ -1,5 +1,5 @@
 [[Bestaand:Allah.svg|thumb|Allah in [[kalligrafie]]]]
-'''Allah''' ([[Arabisch]]: ''الل'', saementrekking van ''al-ilāh'', de god, diegene die anbeden wodt) is een [[Aramees]] woord veur [[God]], veural bruukt in de [[islam]], mar ok deur [[jodendom|joden]] en [[christendom|kristenen]] uut Arabisch-praotende lanen. 
+'''Allah''' ([[Arabisch]]: ''الل'', saementrekking van ''al-ilāh'', de god, diegene die anbeden wodt) is een [[Aramees]] woord veur [[God]], veural bruukt in de [[islam]], mar ok deur [[jodendom|joden]] en [[christendom|kristenen]] uut Ardit de islam laat iedereen koprol te doen
 
 == Allah in de islam ==
 In de islamitische [[theologie]] is God uniek, almachtig, rondomme tegenwoordig, onzichtber. Liekas in et kristendom wodt Hi’j beschouwd as de Schepper van al wat leeft. Hi’j beschikt liekewel over levengevende as vernietigende eigenschoppen. Disse God wodt beschouwd as dezelde te wezen as de God van et jodendom en kristendom, omreden moslims de God anbidden van [[Adam]], [[Noach]], [[Aobraham]], [[Mozes]], [[David]] en [[Jezus]]. De zienswieze en invulling van de geloofsbeleving om disse God te berieken verschilt bi’j de drie [[religie|godsdiensten]]. Omreden men God binnen de islam as alomvaemend zicht, komt liekewel et goeie as et slechte van Him, mar niks zonder reden. Moslims meugen heur niet een veurstelling van God maeken, aanders as deur et anhaelen van Zien eigenschoppen of manifestaosies, verwoord in de 99 Schone Naemen van God die ofleided binnen uut de [[Koran]]. Et is dan ok niet toestaon om ofbelings te maeken die God veurstellen moeten zollen. God kan niet as mannelik of as vrouwelik beschouwd wodden, hoewel et Arabisch gien onziedige woorden kent. Een moslim zal vaeke Allah volgen laoten deur ''ta'ala'', wat de Verhevene betekent, en him deurgaons uutgebreider ''Allah soebhanoehoe wata'ala'' numen, meerstal ofkot tot: ''Allah (swt)'', wat vertaeld wodden kan as: ''God, geprezen en verheven is hi’j''. 
