--- a/Algemene_Nedersaksische_Schriefwieze.mw
+++ b/Algemene_Nedersaksische_Schriefwieze.mw
@@ -6,7 +6,7 @@ De principes van leesbaorheid en bruukbaorheid vormen in disse spelling, net as 
 ==Vereenvoudigingen==
 Eén van de vereenvoudigingen is et schrieven van de uutgang -lijk as ''-lik''. Hier is veur ekeuzen umdat -lijk niet overenekömp mit de uutspraak, en umdat ''-lik'' een historisch ezien juustere weergave is; vergeliek mit et [[Oldsaksisch|Oudsaksische]] ''-līk'' en et [[Middelnederduuts]]e ''-li{{small()|c}}k / -ly{{small()|c}}k''. Schriefwiezes as -lek en -luk zollen té fonetisch wörden. De schriefwieze -lik slöt oek beter an bie de aandere Germaanse talen (vergeliek: -lich, -lik, -lig, -ligur/-legur en -ly).
 
-Oek is de uutgang -isch vereenvoudigd naor -isch, hier is veur ekeuzen umdat et al sinds eeuwen zo uutespreuken wördt. Et kömp van de [[Oergermaans]]e en [[Oldsaksisch|Oudsaksische]] uutgang -isk, die in et [[Hoogduuts]] -isch (-isj) is ewörden, en via et [[Hoogduuts]] in de schrieftaal van et [[Middelnederlaands]], [[Middelnedersaksisch]] en de aandere Nederlaandse streektalen terechtekeumen is.
+Et achtervoegsel -isch is wel behouwen umdat et in et merendeel van de bestaonde Nedersaksische schriefwiezes zo eschreven wördt, en umdat et anslöt bie et Duuts-Saksisch.
 
 Um an te sluten bie et Platduuts (et Nedersaksisch van Duutslaand) is derveur ekeuzen um de letter c te schrieven as <k>, as de uutsprake mit een /k/ is, en et blif <c> as et een /s/-klank hef. Een Uutzundering is bie et gebruuk van uutheemse woorden waorvan nog dudelik te heuren/zien is dat et een butenlaands woord is. Bieveurbeeld: et Italiaanse woord ''cappuccino'', mer et woord ''computer'' is dusdaonig in-eburgerd in de taal dat et as ''komputer'' eschreven wördt. Een ander geval is nao een <k>, bv. in woorden as ''aksent'' en ''aksepteren''.
 
