*Empty MediaWiki Message*

--- a/Algemene_Nedersaksische_Schriefwieze.mw
+++ b/Algemene_Nedersaksische_Schriefwieze.mw
@@ -4,7 +4,7 @@ De '''Algemene Nedersaksische Schriefwieze''' (aofekort: '''ANS''') is in [[2011
 De principes van leesbaorheid en bruukbaorheid vormen in disse spelling, net as in de [[SONT-spelling]], et uutgangspunt, hierbie mut der vanzelf wel op elet wörden dat et allemaole konsistent en konsekwent is. Die konsistensie en konsekwensie mag der vanzelf niet toe liejen da'j in et uterste terechtekoemen van een spelling, die zo nauw luustert naor de klanken as dat ze uutespreuken wörden. Een fonetische spelling is niet allinnig meuilik leesbaor mer oek niet arg zinvol a'j een breed publiek bereiken willen. Et is allinnig zinvol veur utingen in de taalkunde waorbie klankverschillen an-egeven mutten wörden, mer daorveur ku'j mooi et naor sekure [[Internasjonaal Klaankenskrift|Internasionale Klankeschrift]] (IPA) gebruken. Daornaost hef disse spelling, in tegenstelling tot de SONT-spelling, as uutgangspunt um wat meer bie et Duuts-Nedersaksisch an te sluten.
 
 ==Belangrieke punten==
-Eén van de anpassingen is et schrieven van de uutgang -lijk as ''-lik''. Hier is veur ekeuzen umdat -lijk niet overenekömp mit de uutspraak, en umdat ''-lik'' een verkorting is van de oorspronkelike lange i-uutsprake uut et [[Oldsaksisch|Oudsaksische]] ''-līk'', en et [[Middelnedersaksisch]]e ''-li{{small()|c}}k / -ly{{small()|c}}k'',  dat later aofesleten is tot een sjwa. Schriefwiezes as -lek en -luk zollen té fonetisch wörden. De schriefwieze -lik slöt oek beter an bie de aandere Germaanse talen (vergeliek: -lich, -lik, -lig, -ligur/-legur en -ly).
+Eén van de anpassingen is et schrieven van de uutgang -lijk as ''-lik''. Hier is veur ekeuzen umdat -lijk niet overenekömp mit de uutspraak, en umdat ''-lik'' een verkorting is van de oorspronkelike lange i-uutsprake uut et [[Oldsaksisch|Oudsaksische]] ''-līk'', en et [[Middelnederduuts]]e ''-li{{small()|c}}k / -ly{{small()|c}}k'',  dat later aofesleten is tot een sjwa. Schriefwiezes as -lek en -luk zollen té fonetisch wörden. De schriefwieze -lik slöt oek beter an bie de aandere Germaanse talen (vergeliek: -lich, -lik, -lig, -ligur/-legur en -ly).
 
 Et achtervoegsel -isch is wel behouwen umdat et in et merendeel van de bestaonde Nedersaksische schriefwiezes zo eschreven wördt, en umdat et anslöt bie et Duuts-Saksisch.
 
