--- a/Ny_Heidendom.mw
+++ b/Ny_Heidendom.mw
@@ -14,14 +14,14 @@ De feesten dee as heidenen der up nå holdet, bint oaver enöämen van de feeste
 
 De feesten gåt oaver de vergang van de tyd dår et jår hen. Sy ståt der so ait by stille dat de natuur veranderen düt, dat de jårgetyden mekandere ofwisselet. Et bewüst medloupen med de seisunen hevt der ouk med van doon dat dat de ofspegelinge is van uwen eigen leaven; want y wörd ouk geboaren, gröit up en kumt weader üüt de tyd. Vöär vöäl heidenen is de natuur dee as elk jår weader syn runde löpt, een belovte dat ysülv ouk nå dit leaven weader een ny leaven krygt.
 
+* (nacht en dag van) 31 oktober/1 november: [[Samhain]]/ [[halloween]]
 * 25 december töt 6 januari: [[Juul]] 
-* [[Imbolc]] 
-* [[Ostara]] 
-* [[Beltane]]/ [[Walpurgisnacht]] 
-* [[Midsummerfeest]] / Litha 
-* [[Lughnasadh]] 
-* [[Mabon]] 
-* [[Samhain]]/ [[halloween]]/ [[Allerheiligen]]/ [[Allerselen]]
+* 1 februari: [[Imbolc]] 
+* 21 maert: [[Ostara]] 
+* 1 mei: [[Beltane]]/ [[Walpurgisnacht]] 
+* 21 juni: [[Midsummerfeest]] / Litha 
+* 1 augustus [[Lughnasadh]] / Lammas
+* 20/23 september: [[Mabon]] 
 
 ===Måne===
 Vöäral Wikka heksen doot de måne volgen en vereyren, want de måne is jå et beyld van de Godinne. In katolike karken see y Mary ouk med de måne of ebeyled wörden. Dit sol oaver enöämen weasen van de olde heidenske vereyring van de [[Modergodinne]].
