--- a/Ny_Heidendom.mw
+++ b/Ny_Heidendom.mw
@@ -1,18 +1,18 @@
 Et '''Ny Heidendom''' is een (natuur)godsdeenst dee terügge grept når oldere vöärchristelike godsdeensten. Mangs wördet ouk wal, når et engelsk, '''Paganisme''' of '''Neopaganisme''' enömed. 
 
-Et kan allemåle heyl verskillend weasen. Y hebt der gruppen dee as sich alleyne richted up de olde keltiske godsdeenst, anderen weader up de germaansken. Mar vöäle kyket wyder en hebbet sülvs invloden van inheymske amerikanen of de aboriginals. Y hoovt ouk neet by een grup an eslötten te weasen ümme 'heiden' of 'paganist' te weasen. Sy vallet samen ümdat sy allemåle kyket når vöärchristelike godsdeensten en gelöyvet dat de natuur heilig is. De meyste heidenen bint ouk drok med et milieu en et gröön leaven. Süns halvweags de 19. eywe bint der al gruppen, dee de olde godsdeensten weaderümme praktiseret.
+Et kan allemåle heyl verskillend weasen. Y hebt der gruppen dee as sich alleyne richted up de olde keltiske godsdeenst, anderen weader up de germaansken. Mar vöäle kyket wyder en hebbet sülvs invloden van inheymske amerikanen of de aboriginals. Y hoovt ouk neet by een grup an eslötten te weasen ümme 'heiden' of 'paganist' te weasen. Sy vallet samen ümdat sy allemåle kyket når vöärchristelike godsdeensten en gelöyvet dat de natuur heilig is. De meyste heidenen bint ouk drok med et milieu en et gröön leaven. Sünds halvweags de 19. eywe bint der al gruppen, dee de olde godsdeensten weaderümme praktiseret.
 
-[[Asatru]] is een grup dee as de olde skandinaviske godsdeenst hevt doon herleaven. In meart 2027 wördden Asatru as religy up enöämen döär de [[amerikaanske strydmachten]]. Der wörd up Ysland nu ouk ebouwed an een nye viking-tempel.
+[[Asatru]] is een grup dee as de olde skandinaviske godsdeenst hevt doon herleaven. In meart 2027 wördden Asatru in de ryge van religys up enöämen döär de [[amerikaanske strydmachten]]. Der wörd up Ysland nu ouk ebouwed an een nye viking-tempel.
 
-Heidenen gelöyvet vake ik vöäle goden (of disse goden as écht ervåred wörd, of dat se symbolisk bint, verskilt de persoon). Sy künnet evåren dat de goden of geesten/krachten ín de natuur woanet. Vöäle holdet sich ouk gangs med sjamanisme.
+Heidenen gelöyvet vake in vöäle goden (of disse goden as écht ervåred wördet, of dat se symbolisk bint, verskilt de persoon). Sy künnet evåren dat de goden of geysten/krachten ín de natuur woanet. Vöäle holdet sich ouk gangs med sjamanisme.
 
 ==Verhalen==
-In het heidendom wördet der vöäle verhalen vertelt. Want unse vöärchristelike vöärolders hadden een wyde verhalencultuur. Al de verhalen oaver helden, goden en et untståne van de wearld en de sociale kasten wördden pråtend döär egeavene. Een antal van de verhalen hebbet in et begün van et verchristeliken et up papyre eredded (so as de [[Edda]] en keltiske spröäkys dee as döär munniken up eskreaven binnet). Van disse verhalen müttet wy et hebben, döär gåt de nye heidenen vanüüt. Sy gåt de verhalen in disse tyd trekken en bekyken wat der vöär wysheiden vöär de hüdige tyd der in ståt. Mar de verhalen künnet ouk gewoon mooi weasen, en good up evored wörden ter vermaak en inleaving.
+In et heidendom wördet der vöäle verhalen vertelt. Want unse vöärchristelike vöärolders hadden een wyde verhalencultuur. Al de verhalen oaver helden, goden en et untståne van de wearld en de sociale kasten wördden pråtend döär egeaven. Een antal van de verhalen hebbet in et begün van et verchristeliken et up papyre eredded (so as de [[Edda]] en keltiske spröäkys dee as döär munniken up eskreaven bint). Van disse verhalen müttet wy et hebben, döär gåt de nye heidenen vanüüt. Sy gåt de verhalen in disse tyd trekken en bekyken wat der vöär wysheiden vöär de hüdige tyd der in ståt. Mar de verhalen künnet ouk gewoon mooi weasen, en good up evored wörden ter vermaak en inleaving.
 
 ==Feesten==
 De feesten dee as heidenen der up nå holdet, bint oaver enöämen van de feesten dee as de olde kelten en germanen döäden. Mar ouk wörd der ekekken når feestdage van romeinen, greken, slaven en so meyr, ümdat dissend de feesten ungeveyr gelyke hadden. Disse godsdeensten hebbet allemåle eynsülvde oorsprüng by de Indo-Europeanen. Wikka heksen doot der ait noch by elke vulle måne rituelen. Wikka lüde nömet so ne feest een ''sabbat''.
 
-De feesten gåt oaver de vergang van de tyd dår et jår hen. Sy ståt der so ait by stille dat de natuur veranderen düt, dat de jårgetyden mekandere ofwisselet. Et bewüst medloupen med de seisunen hevt der ouk med van doon dat dat de ofspegelinge is van uwen eigen leaven; want y wörd ouk geboaren, gröit up en kumt weader üüt de tyd. Vöär vöäl heidenen is de natuur dee as elk jår weader syn runde löpt, een belovte dat ysülv ouk nå dit leaven weader een ny leaven krygt.
+De feesten gåt oaver de vergang van de tyd dår et jår hen. Sy ståt der so ait by stille dat de natuur veranderen düt, dat de jårgetyden mekandere ofwisselet. Et bewüst medloupen med de seisunen hevt der ouk med van doon dat et de ofspegelinge is van uwen eigen leaven; want y wörd ouk geboaren, gröit up en kumt weader üüt de tyd. Vöär vöäl heidenen is de natuur dee as elk jår weader syn runde löpt, een belovte dat ysülv ouk nå dit leaven weader een ny leaven krygt.
 
 * 31 oktober/1 november: [[Samhain]]/ [[halloween]]
 * 25 december töt 6 januari: [[Juul]] 
@@ -24,7 +24,7 @@ De feesten gåt oaver de vergang van de tyd dår et jår hen. Sy ståt der so ai
 * 20/23 september: [[Mabon]] 
 
 ===Måne===
-Vöäral Wikka heksen doot de måne volgen en vereyren, want de måne is jå et beyld van de Godinne. In katolike karken see y Mary ouk med de måne of ebeyled wörden. Dit sol oaver enöämen weasen van de olde heidenske vereyring van de [[Modergodinne]].
+Vöäral Wikka heksen doot de måne volgen en vereyren, want de måne is jå et beyld van de Godinne. In katolike karken see y Mary ouk med de måne of ebeylded wörden. Dit sol oaver enöämen weasen van de olde heidenske vereyring van de [[Modergodinne]].
 
 Elke vulle måne kummet heksen by mekandere -of sy doot et alleyne- ümme een ''sabbat'' te vyren.
 
