--- a/Ny_Heidendom.mw
+++ b/Ny_Heidendom.mw
@@ -9,6 +9,8 @@ Heidenen gelöyvet vake in vöäle goden (of disse goden as écht ervåred wörd
 ==Verhalen==
 In et heidendom wördet der vöäle verhalen vertelt. Want unse vöärchristelike vöärolders hadden een wyde verhalencultuur. Al de verhalen oaver helden, goden en et untståne van de wearld en de sociale kasten wördden pråtend döär egeaven. Een antal van de verhalen hebbet in et begün van et verchristeliken et up papyre eredded (so as de [[Edda]] en keltiske spröäkys dee as döär munniken up eskreaven bint). Van disse verhalen müttet wy et hebben, döär gåt de nye heidenen vanüüt. Sy gåt de verhalen in disse tyd trekken en bekyken wat der vöär wysheiden vöär de hüdige tyd der in ståt. Mar de verhalen künnet ouk gewoon mooi weasen, en good up evored wörden ter vermaak en inleaving.
 
+As heiden bin y vake interesseert in de olde geskydenisse. Se doot de olde mytes en spröäkys leasen, en der oaver nå denken wat dår van de oorsprüng of de betekkenisse is. Ouk is der vöäle te halen üüt de archeology en olde künst. Döär te leyren en te söken når de vöärolders, leyr y ho as sy edachted en edåne hebbet.
+
 ==Feesten==
 De feesten dee as heidenen der up nå holdet, bint oaver enöämen van de feesten dee as de olde kelten en germanen döäden. Mar ouk wörd der ekekken når feestdage van romeinen, greken, slaven en so meyr, ümdat dissend de feesten ungeveyr gelyke hadden. Disse godsdeensten hebbet allemåle eynsülvde oorsprüng by de Indo-Europeanen. Wikka heksen doot der ait noch by elke vulle måne rituelen. Wikka lüde nömet so ne feest een ''sabbat''.
 
