--- a/Ny_Heidendom.mw
+++ b/Ny_Heidendom.mw
@@ -31,7 +31,7 @@ Vöäral Wikka heksen doot de måne volgen en vereyren, want de måne is jå et 
 Elke vulle måne kummet heksen by mekandere -of sy doot et alleyne- ümme een ''sabbat'' te vyren.
 
 ==Krachten==
-De ''Olde Religy'', so as et döär vöäle heidenen enömed wörd, leyrt dat de earde en et heylal vul med kracht sit. Disse krachten doot de dinge geböären en ofstarven. Disse krachten künnet ouk estüred wörden, mar better wark y der med samen. In de summer bint de krachten et drokst an de gang, med harvst trekket de krachten sich terügge når de underwearld en rüstet üüt. Se wördet ouk wal alven of geysten enömed. Hyr an is de vöäroldervereyring ouk körtby. De vöärolders leavet verdan in de natuur en doot sich ait noch sörgen maken ümme ear bloodverwanten.
+De ''Olde Religy'', so as et döär vöäle heidenen enömed wörd, leyrt dat de earde en et heylal vul med kracht sit. Disse krachten doot de dinge geböären en ofstarven. Disse krachten künnet ouk estüred wörden, mar better wark y der med samen. In de summer bint de krachten et drokst an de gang, med harvst trekket de krachten sich terügge når de underwearld en rüstet üüt. Se wördet ouk wal alven of geysten enömed. Hyr an is de vöäroldervereyring ouk körtby. De vöärolders leavet verdan in de natuur en doot sich ait noch sörgen maken ümme ear bloodverwanten. Düs vöäle heidenen bint [[animisme|animistisk]] (alles hevt een sele) of [[panteïsme|panteïstisk]] (alles is goddelik).
 
 ==Stroumings==
 Enkelde stroumings binnen et heidendom:
