--- a/Ny_Heidendom.mw
+++ b/Ny_Heidendom.mw
@@ -4,7 +4,7 @@ Et kan allemåle heyl verskillend weasen. Y hebt der gruppen dee as sich alleyne
 
 [[Asatru]] is een grup dee as de olde skandinaviske godsdeenst hevt doon herleaven. In meart 2027 wördden Asatru in de ryge van religys up enöämen döär de [[amerikaanske strydmachten]]. Der wörd up Ysland nu ouk ebouwed an een nye viking-tempel.
 
-Heidenen gelöyvet vake in vöäle goden (kyk: [[polyteïsme]]) -of disse goden as écht ervåred wördet, of dat se symbolisk bint, verskilt de persoon-. Sy künnet evåren dat de goden of geysten/krachten ín de natuur woanet. Vöäle holdet sich ouk gangs med sjamanisme.
+Heidenen gelöyvet vake in vöäle goden (kyk: [[vöälgodendom]]) -of disse goden as écht ervåred wördet, of dat se symbolisk bint, verskilt de persoon-. Sy künnet evåren dat de goden of geysten/krachten ín de natuur woanet. Vöäle holdet sich ouk gangs med sjamanisme.
 
 ==Verhalen==
 In et heidendom wördet der vöäle verhalen vertelt. Want unse vöärchristelike vöärolders hadden een wyde verhalencultuur. Al de verhalen oaver helden, goden en et untståne van de wearld en de sociale kasten wördden pråtend döär egeaven. Een antal van de verhalen hebbet in et begün van et verchristeliken et up papyre eredded (so as de [[Edda]] en keltiske spröäkys dee as döär munniken up eskreaven bint). Van disse verhalen müttet wy et hebben, döär gåt de nye heidenen vanüüt. Sy gåt de verhalen in disse tyd trekken en bekyken wat der vöär wysheiden vöär de hüdige tyd der in ståt. Mar de verhalen künnet ouk gewoon mooi weasen, en good up evored wörden ter vermaak en inleaving.
@@ -31,7 +31,7 @@ Vöäral Wikka heksen doot de måne volgen en vereyren, want de måne is jå et 
 Elke vulle måne kummet heksen by mekandere -of sy doot et alleyne- ümme een ''sabbat'' te vyren.
 
 ==Krachten==
-De ''Olde Religy'', so as et döär vöäle heidenen enömed wörd, leyrt dat de earde en et heylal vul med kracht sit. Disse krachten doot de dinge geböären en ofstarven. Disse krachten künnet ouk estüred wörden, mar better wark y der med samen. In de summer bint de krachten et drokst an de gang, med harvst trekket de krachten sich terügge når de underwearld en rüstet üüt. Se wördet ouk wal alven of geysten enömed. Hyr an is de vöäroldervereyring ouk körtby. De vöärolders leavet verdan in de natuur en doot sich ait noch sörgen maken ümme ear bloodverwanten. Düs vöäle heidenen bint [[animisme|animistisk]] (alles hevt een sele) en/of [[panteïsme|panteïstisk]] (alles is god-achtig).
+De ''Olde Religy'', so as et döär vöäle heidenen enömed wörd, leyrt dat de earde en et heylal vul med kracht sit. Disse krachten doot de dinge geböären en ofstarven. Disse krachten künnet ouk estüred wörden, mar better wark y der med samen. In de summer bint de krachten et drokst an de gang, med harvst trekket de krachten sich terügge når de underwearld en rüstet üüt. Se wördet ouk wal [[alfen|alven]] of geysten enömed. Hyr an is de vöäroldervereyring ouk körtby. De vöärolders leavet verdan in de natuur en doot sich ait noch sörgen maken ümme ear bloodverwanten. Düs vöäle heidenen bint [[animisme|animistisk]] (alles hevt een sele) en/of [[panteïsme|panteïstisk]] (alles is god-achtig).
 
 ==Stroumings==
 Enkelde stroumings binnen et heidendom:
@@ -41,7 +41,8 @@ Enkelde stroumings binnen et heidendom:
 *[[Druidisme]]
 *[[Sjamanisme]]
 *[[Nederlands Heidendom]]
-*...
+*[[oldsassiske godsdeenst]]
+*[...]
 
 
 {{Dialekt|sdz}}
