--- a/Ny_Heidendom.mw
+++ b/Ny_Heidendom.mw
@@ -41,7 +41,7 @@ Enkelde stroumings binnen et heidendom:
 *[[Druidisme]]
 *[[Sjamanisme]]
 *[[Nederlands Heidendom]]
-*[[oldsassiske godsdeenst]]
+*[[Oldsassiske godsdeenst]]
 *[...]
 
 
