--- a/Ny_Heidendom.mw
+++ b/Ny_Heidendom.mw
@@ -1,10 +1,13 @@
-Et '''Ny Heidendom''' is een (natuur)godsdeenst dee terügge grept når oldere vöärchristelike godsdeensten. Mangs wördet ouk wal, når et engelsk, '''Paganisme''' of '''Neopaganisme''' enömed. 
+Et '''Ny Heidendom''' is een (natuur)godsdeenst dee terügge grept når oldere vöärchristelike godsdeensten. Mangs wörd et ouk wal, når et engelsk, '''Paganisme''' of '''Neopaganisme''' enömed. 
 
 Et kan allemåle heyl verskillend weasen. Y hebt der gruppen dee as sich alleyne richted up de olde keltiske godsdeenst, anderen weader up de germaansken. Mar vöäle kyket wyder en hebbet sülvs invloden van inheymske amerikanen of de aboriginals. Y hoovt ouk neet by een grup an eslötten te weasen ümme 'heiden' of 'paganist' te weasen. Sy vallet samen ümdat sy allemåle kyket når vöärchristelike godsdeensten en gelöyvet dat de natuur heilig is. De meyste heidenen bint ouk drok med et milieu en et gröön leaven. Sünds halvweags de 19. eywe bint der al gruppen, dee de olde godsdeensten weaderümme praktiseyret.
 
 [[Asatru]] is een grup dee as de olde skandinaviske godsdeenst hevt doon herleaven. In meart 2027 wördden Asatru in de ryge van religys up enöämen döär de [[amerikaanske strydmachten]]. Der wörd up Ysland nu ouk ebouwed an een nye viking-tempel.
 
 Heidenen gelöyvet vake in vöäle goden (kyk: [[vöälgodendom]]) -of disse goden as écht ervåred wördet, of dat se symbolisk bint, verskilt de persoon-. Sy künnet evåren dat de goden of geysten/krachten ín de natuur woanet. Vöäle holdet sich ouk gangs med sjamanisme.
+
+==Heiden/ pagan==
+In de vrogge middeleywen, toon as et christendom sich heanig an, of med opdringen, in Europa kwamt, kwamen sy vöäral eysr in de städen. En van of döär wörden der epreadiked når de plattelanders. Disse lüde wörden döär de christelike städelingen ''heidenen'' enömed; 'sy dee up de heide woanet. Up et platteland bleyvden de olde religy noch vöäl langer döär doon. En so kwamt et dat et woord vöär plattelanders/ 'heidebewoaners' de bedüding wörden vöär lüde dee sich med de olde religy gangs bleyvden holden. Et woord 'pagan', wat de engelsksprekkers gebrüket, kümt van de sülvde oorsprüng: et kümt van et latynsk ''paganus'', wat 'dorpeling' of 'plattelander' betekkend.
 
 ==Verhalen==
 In et heidendom wördet der vöäle verhalen vertelt. Want unse vöärchristelike vöärolders hadden een wyde verhalencultuur. Al de verhalen oaver helden, goden en et untståne van de wearld en de sociale kasten wördden pråtend döär egeaven. Een antal van de verhalen hebbet in et begün van et verchristeliken et up papyre eredded (so as de [[Edda]] en keltiske spröäkys dee as döär munniken up eskreaven bint). Van disse verhalen müttet wy et hebben, döär gåt de nye heidenen vanüüt. Sy gåt de verhalen in disse tyd trekken en bekyken wat der vöär wysheiden vöär de hüdige tyd der in ståt. Mar de verhalen künnet ouk gewoon mooi weasen, en good up evored wörden ter vermaak en inleaving.
