--- a/Ny_Heidendom.mw
+++ b/Ny_Heidendom.mw
@@ -7,7 +7,7 @@ Et kan allemåle heyl verskillend weasen. Y hebt der gruppen dee as sich alleyne
 Heidenen gelöyvet vake in vöäle goden (kyk: [[vöälgodendom]]) -of disse goden as écht ervåred wördet, of dat se symbolisk bint, verskilt de persoon-. Sy künnet evåren dat de goden of geysten/krachten ín de natuur woanet. Vöäle holdet sich ouk gangs med sjamanisme.
 
 ==Heiden/ pagan==
-In de vrogge middeleywen, toon as et christendom sich heanig an, of med opdringen, in Europa kwamt, kwamen sy vöäral eysr in de städen. En van of döär wörden der epreadiked når de plattelanders. Disse lüde wörden döär de christelike städelingen ''heidenen'' enömed; 'sy dee up de heide woanet. Up et platteland bleyvden de olde religy noch vöäl langer döär doon. En so kwamt et dat et woord vöär plattelanders/ 'heidebewoaners' de bedüding wörden vöär lüde dee sich med de olde religy gangs bleyvden holden. Et woord 'pagan', wat de engelsksprekkers gebrüket, kümt van de sülvde oorsprüng: et kümt van et latynsk ''paganus'', wat 'dorpeling' of 'plattelander' betekkend.
+In de vrogge middeleywen, toon as et christendom sich heanig an, of med opdringen, in Europa an döäd, kwamen sy vöäral eyst in de städen. En van of döär wörden der epreadiked når de plattelanders. Disse lüde wörden döär de christelike städelingen ''heidenen'' enömed; 'sy dee up de heide woanet. Up et platteland bleyvden de olde religy noch vöäl langer döär doon. En so kwamt et dat et woord vöär plattelanders/ 'heidebewoaners' de bedüding wörden vöär lüde dee sich med de olde religy gangs bleyvden holden. Et woord 'pagan', wat de engelsksprekkers gebrüket, kümt van de sülvde oorsprüng: et kümt van et latynsk ''paganus'', wat 'dorpeling' of 'plattelander' betekkend.
 
 ==Verhalen==
 In et heidendom wördet der vöäle verhalen vertelt. Want unse vöärchristelike vöärolders hadden een wyde verhalencultuur. Al de verhalen oaver helden, goden en et untståne van de wearld en de sociale kasten wördden pråtend döär egeaven. Een antal van de verhalen hebbet in et begün van et verchristeliken et up papyre eredded (so as de [[Edda]] en keltiske spröäkys dee as döär munniken up eskreaven bint). Van disse verhalen müttet wy et hebben, döär gåt de nye heidenen vanüüt. Sy gåt de verhalen in disse tyd trekken en bekyken wat der vöär wysheiden vöär de hüdige tyd der in ståt. Mar de verhalen künnet ouk gewoon mooi weasen, en good up evored wörden ter vermaak en inleaving.
