[[Spesiaal:LintErrors/bogus-image-options]], replaced: |400x| → |400px|, |thumb|right| → |thumb|,  [http://www.tg4.ie  →  [http://www.tg4.ie/ using [[Project:AWB|AWB]]

--- a/Iers.mw
+++ b/Iers.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Cainteoirí Gaeilge - Irish Speakers.svg|thumb|right|400x|Sprekkers van t Iers per preveensie (Noord-Ierlaand erèknd as één preveensie)]]
+[[Ofbeelding:Cainteoirí Gaeilge - Irish Speakers.svg|thumb|400px|Sprekkers van t Iers per preveensie (Noord-Ierlaand erèknd as één preveensie)]]
 t '''Iers''' of '''Iers-Goals''' (Iers:''Gaeilge'') is ne [[Kelties]]e sproake den in [[Ierlaand (laand)|Ierlaand]] esprökn wördt. De sproake beheurt tot de [[Indo-Uropese taolen|Indo-Europese]] en Keltiese sproaknfemilies.
 
 == Gebroek ==
@@ -16,7 +16,7 @@ t Iers is verwaant an alle aandere Keltiese sproakn:
 * [[Bretonsk|Bretons]] (oet [[Bretanje]], [[Fraankriek]])
 
 == Oetgoande verbeendings ==
-* [http://www.tg4.ie www.tg4.ie] Webstea van n Iers TV-stasjon
+* [http://www.tg4.ie/ www.tg4.ie] Webstea van n Iers TV-stasjon
 
 {{Dia|Disse pagina is eskreewn in t [[Riesns]]}}
 
