/* top */[[Spesiaal:LintErrors/bogus-image-options]], replaced: |400x| → |400px|, |thumb|right| → |thumb| using [[Project:AWB|AWB]]

--- a/Trompet.mw
+++ b/Trompet.mw
@@ -1,5 +1,5 @@
-[[Bestaand:Trumpet 1.jpg|thumb|right|400x|n trompet]]
-n '''Trompet''' is n [[kopper]]n bloasinstremeant, wa'j köant bespöln duur de lipn teegn t moondstukke te zetn en ze loatn triln duur te poesn. Ofhaankelik van wovölle krach a'j zett, keump dr nen heugerden of leegerden toon oet. Dus hoe sneller at oew de lipn trilt, des te heuger t geluud.<br />n Trompet hef n heelder en hoog geluud. Doarumme wördt'e biej t ''skoarpe kopper'' erèknd. Meestieds is n trompet in Bb estemd.<br />n Ofstaand van t moondstukke tot an n beker is um en noabiej de 50 cm. Mear a'j n buis oetrolt, kom iej wal an n meter of aanderhalf. An n n buis zitt dree [[ventiel]]n. Dee mu'j indrukn um nen aandern toon te kriegn in kombinasie met verhoging of verleging van de lipspanning.
+[[Bestaand:Trumpet 1.jpg|thumb|400px|n trompet]]
+n '''Trompet''' is n [[kopper]]n bloasinstremeant, wa'j köant bespöln duur de lipn teegn t moondstukke te zetn en ze loatn triln duur te poesn. Ofhaankelik van wovölle krach a'j zett, keump dr nen heugerden of leegerden toon oet. Dus hoe sneller at oew de lipn trilt, des te heuger t geluud.<br />n Trompet hef n heelder en hoog geluud. Doarumme wördt'e biej t ''skoarpe kopper'' erèknd. Meestieds is n trompet in Bb estemd.<br />n Ofstaand van t moondstukke tot an n beker is um en noabiej de 50&nbsp;cm. Mear a'j n buis oetrolt, kom iej wal an n meter of aanderhalf. An n n buis zitt dree [[ventiel]]n. Dee mu'j indrukn um nen aandern toon te kriegn in kombinasie met verhoging of verleging van de lipspanning.
 
 == Gebroek ==
 n Trompet wörd in völle soortn [[meziek|muziek]] gebroekt: oonder mear in j[[Jazz|azz]], [[klassiek]], r[[Reggae|eggae]], s[[Ska|ka]]. t Is n vast instrumeant in bloasorkestn, kapeln, harmoniejn en fanfares.
