[[Spesiaal:LintErrors/bogus-image-options]], replaced: |300x| → |300px| (3), |thumb|right| → |thumb| (3), *[http://www.klompenmaken.nl  → *[http://www.klompenmaken.nl/  (2) using [[Project:AWB|AWB]]

--- a/Kloomp.mw
+++ b/Kloomp.mw
@@ -1,13 +1,13 @@
-[[Ofbeelding: Wooden Shoes-willow-plain wood.jpg|thumb|right|300x|Blaanke kloompn van willingnhoolt]]
-[[Ofbeelding: Klompenmetband.jpg|thumb|right|300x|Kloompn met nen learn baand]]
-[[Ofbeelding: Klomp Enter.jpg|thumb|right|300x|N grötsten kloomp van de wearld]]
+[[Ofbeelding: Wooden Shoes-willow-plain wood.jpg|thumb|300px|Blaanke kloompn van willingnhoolt]]
+[[Ofbeelding: Klompenmetband.jpg|thumb|300px|Kloompn met nen learn baand]]
+[[Ofbeelding: Klomp Enter.jpg|thumb|300px|N grötsten kloomp van de wearld]]
 n '''Kloomp''' is n [[hoolt|heultn]] skoon wat al völle honderden joarn besteet en in de [[middeleeuwn]] duur heel [[Europa (continent)|Europa]] völle duur [[boer]]n en woarkleu wör edreagn. Aandere Hollaandse naamn oet dee tied zeent: ''clomp'' en ''holleblock''. Rechtevoort wordt kloompn nog aait van [[pöppel]]-, [[willing]]nhoolt, mear ook van [[lear]] emaakt. T soort kloompn wat van pöppelhoolt wördt emaakt, wördt in [[Tweante]] ''pöppeln'' eneumd. Rechtevoort wördt dit ook vaake as benaming vuur alle kloompn gebroekt.
 
 n Kloomp is duur de [[EU]] etest en voldut an alle vuurweardn um offisjeel erkend te wordn as volweardigen woarkskoon.
 
 Op kloompn loopn geet nit vanzelf. Eenn den nog nooit op kloompn hef elop verlös noa n poar stapn de kloompn en krig ne zeare [[wrieje]]. A-j de beene optilt mu-j de teene iets krommn. Doarduur blif n kloomp oe an de teene hangn. T kan vuurkommn dèt ene ne te hooge wrieje hef. N kloompnmaker kan dan de wrieje van n t stel kloompn iets oetsliepn. As t dan nog nit geet, sliept ze de heele wrieje dr oet en maakt ze dr nen learn baand oawerhen.
 
-[[Eanter]] is laandelik bekeand as t ''Kloompndoarp''. Hier steet ook n grötsten kloomp van de wearld: 403cm laank, 171cm breed en 169cm hooge. Doarmet steet-e in t [[Guinness Book of Records]].
+[[Eanter]] is laandelik bekeand as t ''Kloompndoarp''. Hier steet ook n grötsten kloomp van de wearld: 403&nbsp;cm laank, 171&nbsp;cm breed en 169&nbsp;cm hooge. Doarmet steet-e in t [[Guinness Book of Records]].
 
 Vrooger had iedere strekke wier zin eegn kloompmodel. De leu konn doarduur an t soort kloomp zeen woer of dr ene vort kwam.
 
@@ -34,10 +34,10 @@ Vrooger had iedere strekke wier zin eegn kloompmodel. De leu konn doarduur an t 
 *[http://www.youtube.com/watch?v=Hsitd8kz65Q Filmken op YouTube oawer haandgemaakte kloompn in Eanter]
 
 Zelf n stel kloompn maakn?
-*[http://www.klompenmaken.nl Kloompn maakn] Ne oetgebreaide beskriewing van t met de haande maakn van kloompn
-*[http://www.klompen.nl www.klompen.nl]
+*[http://www.klompenmaken.nl/ Kloompn maakn] Ne oetgebreaide beskriewing van t met de haande maakn van kloompn
+*[http://www.klompen.nl/ www.klompen.nl]
 
-{{Dia|Disse pagina is eskreewn in t [[Riesns]]}} 
+{{Dia|Disse pagina is eskreewn in t [[Riesns]]}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Scho]]
