[[Spesiaal:LintErrors/bogus-image-options]], replaced: |300x| → |300px|, |thumb|right| → |thumb|, ‎]] → ]], [http://www.midwinterhoorn.nl  → [http://www.midwinterhoorn.nl/ using [[Project:AWB|AWB]]

--- a/Mirreweenterhoorn.mw
+++ b/Mirreweenterhoorn.mw
@@ -2,16 +2,16 @@
 [[Ofbeelding:midwinterhoorn1.jpg|thumb|200px|right|Mirreweenterhoornbloazn]]
 n '''Mirreweenterhoorn''' ([[Nederlaands]]: ''midwinterhoorn'') is n oold, heultn bloasinstrumeant wat um de karstdeage wörd gebroekt in [[Tweante]], n [[Achterhook]], Oostn van [[Sallaand]], [[Westerwoolde (streek)|Westerwolde]] en wat plaatsn in [[Duutslaand]]. t Lik t meest op nen [[alpenhoorn]]. t Is nen haand-emaakten, lecht eböagnen hoorn van [[birk|boarkn-]], [[elze|ealzn-]] of [[willing|wilgnhoolt]], met n moondstuk (de ''happe'') van [[vlier]]hoolt.
 
-n Mirreweenterhoorn is wal van [[holt|hoolt]], mear t wördt toch tot de [[kopper|kopperne]] bloasinstremeantn erèknd, umde'j dr op dezelfde manere geluud oet mutn kriegn as oet nen [[trompet]]. Duur spanning op de lipn te verheugn of te verleegn krie'j nen heugerden of nen legerden toon. Mirreweenterhoorns hebt gin knöppe, extra geater of klepn. Hierduur krie'j dr allenig mear [[natuurtoon|natuurtoonn]] oet.
+n Mirreweenterhoorn is wal van [[holt|hoolt]], mear t wördt toch tot de [[kopper]]ne bloasinstremeantn erèknd, umde'j dr op dezelfde manere geluud oet mutn kriegn as oet nen [[trompet]]. Duur spanning op de lipn te verheugn of te verleegn krie'j nen heugerden of nen legerden toon. Mirreweenterhoorns hebt gin knöppe, extra geater of klepn. Hierduur krie'j dr allenig mear [[natuurtoon]]n oet.
 
 ==Gebroek==
-t Mirreweenterhoornbloazn hef zin oorsproonk in de [[Germanen|Germaanse]] [[Joelfeest|joelfeestn]], dee zo roond t ''mirreweenter'' (21 december) eheuldn wördn. De joelfeestn wördn noar t skient eheuldn um t duuster en kwoade geestn te verdriewn. Toew as de [[Saksen (vôlk)|Saksen]] töt t [[Kristendom]] wördn edwungn, wör t gebroek van n mirreweenterhoorn verdreeid. t Bloazn wör gebroekt um n komst van [[Christus]] an te kondigen.
+t Mirreweenterhoornbloazn hef zin oorsproonk in de [[Germanen|Germaanse]] [[joelfeest]]n, dee zo roond t ''mirreweenter'' (21 december) eheuldn wördn. De joelfeestn wördn noar t skient eheuldn um t duuster en kwoade geestn te verdriewn. Toew as de [[Saksen (vôlk)|Saksen]] töt t [[Kristendom]] wördn edwungn, wör t gebroek van n mirreweenterhoorn verdreeid. t Bloazn wör gebroekt um n komst van [[Christus]] an te kondigen.
 
 n Hoorn wör ook gebroekt um boskopn duur te geewn. De noabers konn an t soort roop heurn wat dr an de haande was: of dr n keend was geboorn, of dr ene in nood was en of dr vuur gevoar ewoarskouwd wör.
 
 Meestentieds wördt dr tiedens t tweeduuster ebloazn. As de vorst an de groond is dreg t geluud vearder dan as t doo is. Mangs wördt t oeteande van n hoorn op n raand van ne waterputte ezat, um zo t geluud te verstoarken. n Aandern reedn hiervuur is det t deenk nog wal zwoar kan wordn a'j lange mutn bloazn en buurn te gelieke.
 
-[[Ofbeelding:Midwinterhoorn.jpg|thumb|right|300x|Mirreweenterhoorn as versiering]]
+[[Ofbeelding:Midwinterhoorn.jpg|thumb|300px|Mirreweenterhoorn as versiering]]
 Lös van t bloazen is n mirreweenterhoorn al joarn ne völgebroekte versiering van huze. Det kan eawngood binn as boetn wean.
 
 ==Rechtevoort==
@@ -28,11 +28,11 @@ Dr wörd nog aait edisseld of op de mirreweenterhoorn non wal of nit n melodieke
 In Grönningn is t mirreweenterhoornbloazn völle meender bekeand en meender wied verspreaid, mer der zeent verskeaidene vereanigingn dee't t nog hebt duur ezat. De leaste joarn keump der steeds meer andacht vuur disse tradisie. t Wörd nog edoan in [[Westerwoolde (streek)|Westerwolde]] roond de doarpn [[Wedde-Bennewold|Wedde]], [[Jipsinghuzen]] en Onstwedde, in t [[Oldambt]] in of roond Finsterwolde en in t [[Westerkertier|Westerkwarteer]] in [[Nijkèrk|Niekoark]]. De leste joarn is t bloazn ok te heurn in [[Veendam]], woer as t nog rellatief niej is. Vroger gung dit, oonder n naam ''Sunt-Tomas'', saamn met t gebroek dat alle jungs oet t doarp saamn t laand op gungn met peerdn, dat "Tomasrieden" eneumd wör. Dit was dan n good momeant vuur de jonge kearls um zik an de deerns te loatn zeen. Tegenswoordigs is dit leste gebroek oetestörvn.
 
 == Oetgoande verbeending ==
-[http://www.midwinterhoorn.nl www.midwinterhoorn.nl: ne webstea met mear infermaasie oawer n bouw van n mirreweenterhoorn]
+[http://www.midwinterhoorn.nl/ www.midwinterhoorn.nl: ne webstea met mear infermaasie oawer n bouw van n mirreweenterhoorn]
 
 {{Dia|Disse pagina is eskreewn en in esprökn in t [[Riesns]]}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:In-espreuken artikel]]
-[[Kategorie:Muziekinstrumaent‎]]
+[[Kategorie:Muziekinstrumaent]]
 [[Kategorie:Nedersaksiese kultuur]]
