[[Spesiaal:LintErrors/bogus-image-options]], replaced: |300x| → |300px| (2), |thumb|right| → |thumb| (2) using [[Project:AWB|AWB]]

--- a/Karbietskeetn.mw
+++ b/Karbietskeetn.mw
@@ -1,11 +1,11 @@
-[[Ofbeelding: Carbid.jpg|thumb|right|300x|Stuks karbiet]]
-[[Ofbeelding: Melkbus openluchtmuseum.jpg|thumb|right|300x|Ne melkbusse]]
+[[Ofbeelding: Carbid.jpg|thumb|300px|Stuks karbiet]]
+[[Ofbeelding: Melkbus openluchtmuseum.jpg|thumb|300px|Ne melkbusse]]
 t '''Karbietskeetn''' of '''karbietknapn''' is n gebroek wat um [[oljoar|ooldjoar]] van [[Grunnen (provìnzie)|Grönningn]] tot an n [[Achterhook]] wörd oet evoerd. Ook in [[Freeslaand]] en [[België]] is et bekeand, mer lange neet zo wiedverbreid as in et Neersassiese gebeed. Nöast t ofstekn van veurwoark is t karbietskeetn in t Neersassies gebeed de manere um t oolde joar of te sloetn.
 
 In 2014 wör karbietknapn op de lieste van Nationale Inventaris immaterieel Cultureel Erfgoed ezat.
 
 ==Verleedn==
-t Is good meugelik det t karbietskeetn zinne wörteln in de oolde [[Germanen|Germaanse]] [[Joelfeest|joelfeeste]] hef. Bie dee joelfeeste wörden met völle kabaal de weenter en kwoade geeste verdrewen. Vanzelf was dr in dee tied nog gin karbiet, mear t gung um t kabaal. En karbietskeetn geet met n onmeundig geweeld.
+t Is good meugelik det t karbietskeetn zinne wörteln in de oolde [[Germanen|Germaanse]] [[joelfeest]]e hef. Bie dee joelfeeste wörden met völle kabaal de weenter en kwoade geeste verdrewen. Vanzelf was dr in dee tied nog gin karbiet, mear t gung um t kabaal. En karbietskeetn geet met n onmeundig geweeld.
 
 ==t Gebroek==
 Vuur karbietskeetn beent eene of meardere melkbusn, voarfblikn of anepaste gasflesken neudig, woer of an de eunterkaante n geatjen in is ehöwn. Dan geet t [[karbiet]] in de busse, woernoa dr n betjen [[water]] of spieje biej edoan wördt (of aandere vloeistofn dee't dan vuur haande beent). Doarnoa wördt de melkbusse met n lid of bal of eslötn. Duur ne chemiese woarking van t karbiet met t water ontsteet n gas ([[ethyn]]). Duur n vlämke bie t gat an de eunterkaante van de busse te hooldn, vlög t gas in n braand, woerduur t lid met nen onmeundigen knapperd vort ebloazn wördt. Umdet t gevoarlik woark is, wörd mangs t skoarpe lid ook vervöngn duur nen zachten bal.<br />Um tied te bespoarn en nit n heeln tied te hoown te loopn, wördt an n lid of n bal mangs ook n laank touw emaakt, zode'j t noa t knaln wier heanig op oew an köant haaln.
@@ -29,5 +29,6 @@ Umdet dr in t Neersassiese gebeed völle ruumte is, wördt t karbietskeetn aait 
 * [[Veluws]]: ''karbietschieten'' of ''niejjaorschieten''
 
 {{Dia|Disse pagina is eskreewn in t [[Riesns]]}}
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Nedersaksies feest of gebroek]]
+
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Nedersaksies feest of gebroek]]
