[[Spesiaal:LintErrors/bogus-image-options]], replaced: |300x| → |300px|, |thumb|right| → |thumb| using [[Project:AWB|AWB]]

--- a/Bekn_(muziekinstrumeant).mw
+++ b/Bekn_(muziekinstrumeant).mw
@@ -1,5 +1,5 @@
-[[Ofbeelding: Sabian AA 10 Splash.jpg|thumb|right|300x|Splashbekn van t moark Sabian]]
-'''Bekns''' beent roonde, [[kopper]]ne, lecht bolnde skiewn dee in de [[muziek]] gebroekt wordt. Ze beent nit estemd en vaalt oonder de kategorieje [[slagwoark]]. Ze wordt bespöld duur ze teegn mekoar te houwn, klapn of striekn, of duur dr met [[trommelstökke]] op te houwn. Ze beent dr van ongevear 15 cm duursnee tot 80 cm.
+[[Ofbeelding: Sabian AA 10 Splash.jpg|thumb|300px|Splashbekn van t moark Sabian]]
+'''Bekns''' beent roonde, [[kopper]]ne, lecht bolnde skiewn dee in de [[muziek]] gebroekt wordt. Ze beent nit estemd en vaalt oonder de kategorieje [[slagwoark]]. Ze wordt bespöld duur ze teegn mekoar te houwn, klapn of striekn, of duur dr met [[trommelstökke]] op te houwn. Ze beent dr van ongevear 15&nbsp;cm duursnee tot 80&nbsp;cm.
 
 Bekns beent in 3 deeln te verdeeln:
 * komme (ne stoarke bolling in t mideldn van t bekn. Dit gef n hoog ''Ping''-geluud a'j dr met stökke op houwt)
@@ -14,7 +14,7 @@ Bekns bestoat al zolange de leu [[iezer]] köant maakn. In t oolde [[Olle Egypte
 Elk orkest hef wal n stel bekns. Ze beent bedoold um n tel te hooldn of ne bepoalde stemming of spanning in de muziek te geewn. Ze wordt ook gebroekt um bepoalde deeln in de muziek kracht bie te zetn. Dit kan duur bievuurbeeld met viltne stökke n [[crescendo (muziektheorie)|crescendo]] te maakn.
 
 === Haandbekns ===
-Dit soort hef n learn baand duur de geater in de komn. Hiermet köant ze in de haande eheuldn wordn en teegn mekoar ehouwn wordn. Disse wordt duur [[orkest]]n en [[muziekkorps]]en gebroekt. Dr zeent onmeundig völle verskilnde geluudseffektn oet bekns te haaln. Duur ze op mekoar te legn kö'j dr verskeaidene korte sis-geluudn met maakn. Duur ze teegn mekoar te houwn keump dr t bekeande crash-geluud oet. Duur ze langs mekoar te striekn kö'j dr verskilnde ruusnde of zelfs krasnde geluudn oet kriegn. 
+Dit soort hef n learn baand duur de geater in de komn. Hiermet köant ze in de haande eheuldn wordn en teegn mekoar ehouwn wordn. Disse wordt duur [[orkest]]n en [[muziekkorps]]en gebroekt. Dr zeent onmeundig völle verskilnde geluudseffektn oet bekns te haaln. Duur ze op mekoar te legn kö'j dr verskeaidene korte sis-geluudn met maakn. Duur ze teegn mekoar te houwn keump dr t bekeande crash-geluud oet. Duur ze langs mekoar te striekn kö'j dr verskilnde ruusnde of zelfs krasnde geluudn oet kriegn.
 
 Nöast t muzikale effekt köant bekns ook nog visueel gebroekt wordn, duur lecht te kaatsen of duur ze an de learne beandkes um de haandn of poolsn te zweein.
 
