--- a/Rad.mw
+++ b/Rad.mw
@@ -1,8 +1,8 @@
-[[Bestaand: Australian cart.jpg|thumb|right|200x| Raadn an ne koare]]
+[[Bestaand: Australian cart.jpg|thumb|200px| Raadn an ne koare]]
 n '''Rad''' of '''wiel''' is ne roonde platte skiewe den um zin eegne asse kan dreein en doarmet beweaging of verplaatsing meugelik maakt. n Rad met ne asse dr an maakt doarbie de [[wrieving|wriewing]] meender duur te roln. n Rad kan bewöagn wordn duur dr n kracht op te zetn. Dèt kan met zwöartekracht, of op ne aandere meneere met nen zelf op ewektn kracht. De beste vuurbeeldn beent te veendn in t [[transport]]. Op n wat breder vlak wördt n term ''rad'' (of ''wiel'') ook wal gebroekt vuur roonde platte dinge dee-t köant dreein.
 
 == Geschiedenis ==
-t Rad keump woarskeainlik oet [[Mesopotamië]] en is wellich oet eveundn roond 4000 v. Chr. n Euldstn ofbeelding van wat ne koare met raadn kan wean (ne waage met veer raadn en twee asn) steet op n [[Bronocice pot]]. Dèt is nen eardewoarkn pot den is op egreawn in [[Polen]] en um en noabiej de 3500 v. Chr. emaakt. 
+t Rad keump woarskeainlik oet [[Mesopotamië]] en is wellich oet eveundn roond 4000 v. Chr. n Euldstn ofbeelding van wat ne koare met raadn kan wean (ne waage met veer raadn en twee asn) steet op n [[Bronocice pot]]. Dèt is nen eardewoarkn pot den is op egreawn in [[Polen]] en um en noabiej de 3500 v. Chr. emaakt.
 
 == Neersassies ==
 * [[Drèents]]: ''rad''
@@ -12,8 +12,8 @@ t Rad keump woarskeainlik oet [[Mesopotamië]] en is wellich oet eveundn roond 4
 * [[Veluws]]: ''rad'', ''wiel''
 
 == Anhaling ==
-:''Ik heb een bochel in 't rad''<br />
-:''Want ik had een wichie achterop''<br />
+:''Ik heb een bochel in 't rad''
+:''Want ik had een wichie achterop''
 
 :Van ''Grip'' (2005) deur Lohues & the Louisiana Blues Club
 
